K8s folder/learning yml's/1pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    name: nginx
spec:
  containers:
  - name: nginx-cont
    image: nginx
    ports:
      - containerPort: 80
