K8s folder/learning yml's/Node-affinity.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apache

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-affinity-dep
  namespace: apache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - minikube
      containers:
      - name: apache-cont
        image: httpd:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
