K8s folder/learning yml's/dep.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-dep
  namespace: temp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-cont
          image: nginx
          ports:
            - containerPort: 80
