K8s folder/learning yml's/initcontainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: nginx:latest         
      ports:
        - containerPort: 80    
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
        requests:
          memory: "64Mi"  
          cpu: "250m"
