K8s folder/learning yml's/probes.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-probe-demo
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80

    

    # Probes
    startupProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10     # Wait 10s before first check
      periodSeconds: 5            # Check every 5s
      failureThreshold: 10        # Try 10 times before giving up

    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 20     # Wait longer to avoid conflicts with startupProbe
      periodSeconds: 10
      failureThreshold: 3

    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5
      failureThreshold: 3
    
    resources: {}
