K8s folder/learning yml's/sidecarcontainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-sidecar
spec:
  
  containers:
    - name: nginx
      image: nginx:latest
      command: ["/bin/sh", "-c"]
      args:
        - |
          echo "daemon off;" > /etc/nginx/nginx.conf && \
          echo "events {} http { server { listen 80; access_log /var/log/nginx/access.log; location / { return 200 'Hello from Nginx'; } } }" >> /etc/nginx/nginx.conf && \
          nginx
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/nginx
      resources: {}
    
    - name: sidecar-log-reader
      image: busybox
      command: ["/bin/sh", "-c", "tail -n+1 -F /var/log/nginx/access.log"]
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/nginx
      resources: {none}
  volumes:
    - name: shared-logs
      emptyDir: {}
