K8s folder/learning yml's/taint and tolerance.yml
# taint is to exculde adn tolerance is to include for some special case
#  kubectl taint node minikube prod=true:NoSchedule
# kubectl taint node minikube prod=true:NoSchedule-
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-dep
  namespace: temp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-cont
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
      tolerations:
        - key: "prod"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
