K8s folder/learning yml's/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-route
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notes-app-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
